--- a/applied-insights/tutorials/posts/2026/12/why-95-percent-of-ai-projects-fail.qmd
+++ b/applied-insights/tutorials/posts/2026/12/why-95-percent-of-ai-projects-fail.qmd
@@ -1,5 +1,5 @@
 ---
-title: Why 95% Of AI Projects Fail and How to Change the Odds
+title: "Why 95% Of AI Projects Fail and How to Change the Odds"
 description: |
   Drawing on two decades of work building AI systems for medicine discovery, Lee Clewley argues that the success of AI models rests on three principles.
 categories:
@@ -15,7 +15,7 @@ image: images/thumb95.png
 
 Artificial intelligence is now capable of performing substantive work across scientific, medical, industrial and economic domains, yet organisational experience remains uneven. Most large firms have experimented with AI; very few report material gains. MIT’s NANDA study of enterprise generative AI estimates that only 5 percent of custom tools reach production with measurable impact on profit and loss [@mit_nanda_2025]. Early analysis from MIT’s Iceberg project points in the same direction at task level: current systems could already support far more work than they do today, but observed use remains shallow, concentrated in a narrow set of roles and often confined to standalone ‘copilot’ tools rather than embedded in core workflows [@chopra_iceberg_2025].
 
-For anyone who has sat through AI vendor demonstrations, the pattern is familiar: a procession of polished prototypes that rarely change how important decisions are made. As one Chief Information Officer put it [ @mit_nanda_2025]: 'We've seen dozens of demos this year. Maybe one or two are genuinely useful. The rest are wrappers or science projects.'
+For anyone who has sat through AI vendor demonstrations, the pattern is familiar: a procession of polished prototypes that rarely change how important decisions are made. As one Chief Information Officer put it [@mit_nanda_2025]: 'We've seen dozens of demos this year. Maybe one or two are genuinely useful. The rest are wrappers or science projects.'
 
 Two caveats matter here. Many pilots are exploratory by design, so failure to reach production may not necessarily be a failure in a scientific sense. Profit based metrics also miss scientific and operational learning, which often matters more in research intensive organisations [@ransbotham_2020; @bellefonds_bcg_2024; @deloitte_genai_2024; @schlegel_failure_2023].  Even allowing for those points, evidence across independent surveys is remarkably consistent: most organisations struggle to turn AI model capability into repeated value, and with an estimated 95% failure rate, the question becomes: how do we change the odds? [@mit_nanda_2025; @ransbotham_2020; @bellefonds_bcg_2024; @deloitte_genai_2024; @schlegel_failure_2023].
 
@@ -69,7 +69,7 @@ So assuming you have the right staff who are working together, supportive leader
 
 ![](images/text2.png){width=80% fig-align="center"}
 
-** A useful pattern for a modern AI platform has four parts: **
+**A useful pattern for a modern AI platform has four parts:**
 
 * **First, the data stack.** Discovery teams need a small number of trusted stores for  data with clear provenance and at least basic quality checks. For early target selection this means human genetics, expression data, interaction networks, preclinical phenotypes, clinical outcomes and internal experiments. Traceability and reproducibility is critical here. Any claim a model makes about a gene and disease pair should be traceable back to specific pieces of evidence.
 * **Second, the platform needs to be built on modular services rather than monoliths.** Each service has a single responsibility and can be swapped when a better service  appears. This keeps the cost of change low and allows teams to combine external tools with internal components in a controlled way.
