--- a/applied-insights/tutorials/posts/2026/12/why-95-percent-of-ai-projects-fail.qmd
+++ b/applied-insights/tutorials/posts/2026/12/why-95-percent-of-ai-projects-fail.qmd
@@ -102,7 +102,7 @@ Much commentary on AI spends its energy on model choice, technical detail and to
 For Real World Data Science readers, the implication is direct. AI projects fail when nobody owns the estimand, the counterfactual and the error bars. AI doesn’t need to be perfect, but it needs to be good enough. As the statistician George E. P. Box famously observed: “All models are wrong, but some are useful”. Usefulness here depends on design, discipline and humility as much as model choice. Statisticians, data scientists and methodologists can reclaim the narrative by insisting not only that every AI project begins with a clear question, a credible experiment and a plan to learn, but also that these are held collectively by an integrated team with visible executive backing. That is how more organisations move into the 5 percent.
 
 
-::: article-btn
+::: {.article-btn}
 [Explore more data science ideas](/applied-insights/index.qmd)
 :::
 
