--- a/applied-insights/case-studies/posts/2026/12/why-95-percent-of-ai-projects-fail.qmd
+++ b/applied-insights/case-studies/posts/2026/12/why-95-percent-of-ai-projects-fail.qmd
@@ -9,7 +9,7 @@ author: Lee Clewley
 date: 2026-01-12
 date-format: long
 bibliography: references.bib
-csl: vancouver.csl
+nocite: '@*'
 toc: true
 image: images/thumb95.png
 ---
