--- a/the-pulse/posts/2026/01/21/rwds-big-questions-challenges-today.qmd
+++ b/the-pulse/posts/2026/01/21/rwds-big-questions-challenges-today.qmd
@@ -9,7 +9,7 @@ categories:
   - Practice
   - Careers
 toc: true
-image: images/thumb.png
+image: images/thumb.jpg
 ---
 
 Data science is operating in a moment of paradox. We have more data, more tools, and more computational power than ever before — yet many of the core challenges feel stubbornly human.
