--- a/foundation-frontiers/posts/2026/01/27/data-qual-is-competitive-edge.qmd
+++ b/foundation-frontiers/posts/2026/01/27/data-qual-is-competitive-edge.qmd
@@ -1,16 +1,14 @@
 ---
-title: "Why Data Quality Is the New Competitive Edge for Data Scientists"
-description: 
-  In an AI-enabled world where coding is increasingly automated, data quality emerges as the defining advantage for data scientists.
-date: 2026-01-21
-authors: Roger Hoerl and Willis Jensen
-categories:
-  - Applied Insights
-  - Data science
-  - AI
-  - Data quality
+title: "Why Data Quality Is the New Competitive Edge"
+description: |
+  In an AI-enabled world where coding and models...
 date: 2026-01-27
 date-format: long
+authors:
+  - Roger Hoerl
+  - Willis Jensen
+categories:
+  - Data quality
 bibliography: references.bib
 csl: https://www.zotero.org/styles/vancouver
 nocite: '@*'
