--- a/foundation-frontiers/posts/2026/01/27/data-qual-is-competitive-edge.qmd
+++ b/foundation-frontiers/posts/2026/01/27/data-qual-is-competitive-edge.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Why Data Quality Is the New Competitive Edge"
+title: "Why Data Quality Is the New Competitive Edge For Data Scientists"
 description: |
-  In an AI-enabled world where coding and models...
+  Data scientists were in high demand when they were set apart as coding wizards who could wrangle insights from large amounts of data. In the age of AI, everyone can code and data scientists must pivot their skillset.
 date: 2026-01-27
 date-format: long
 authors:
@@ -16,9 +16,7 @@ toc: true
 image: images/thumb.png
 ---
 
-*Note that this article is based on the following paper and contains some of the same ideas: Hoerl, Roger W. 2025. [“The Future of Statistics in an AI Era.”](https://www.tandfonline.com/doi/full/10.1080/08982112.2025.2556222) Quality Engineering, published September 10, 2025.*
-
-## Introduction: Discipline of Data Science
+## Discipline of Data Science
 
 Data science is a relatively recent field compared to the disciplines that it consists of, namely statistics and computer science. New knowledge and disciplines often arise as combinations of existing fields and data science is no exception. Born into a world with increasingly large datasets, data science combined statistical methods with the tools of computer science to analyze large amounts of data.
 
@@ -26,7 +24,7 @@ As a discipline, data science gained popularity in industry and academia in the 
 
 As Hoerl noted in an earlier piece [@hoerl2025future]:
 
-> “There was a hiring rush for data scientists, not just in technology companies, but in virtually all sectors of the economy. For example, GE hired a new Chief Digital Officer from Oracle, Bill Ruh, in 2011. Ruh opened a new Software Center (later renamed “GE Digital”) in San Ramon, California in 2012, and by 2016 had hired 1,400 data scientists there [@lohr2016].”
+> “There was a hiring rush for data scientists, not just in technology companies, but in virtually all sectors of the economy. For example, GE hired a new Chief Digital Officer from Oracle, Bill Ruh, in 2011. Ruh opened a new Software Center (later renamed “GE Digital”) in San Ramon, California in 2012, and by 2016 had hired 1,400 data scientists there.”
 
 ## Current State of Play with Generative AI
 
@@ -58,6 +56,8 @@ This creates an opportunity for data scientists to become more valuable. By empl
 
 As coding becomes easier in an AI-enabled world - where anyone can code and analyze data - the skill set of a data scientist becomes less unique. Data scientists were once in high demand because they set themselves apart as coding wizards who could wrangle large datasets and extract insights. To remain successful and continue to deliver value, data scientists must now pivot their skillset. The real limiting factor in successful data science is data quality. A renewed focus on owning, improving and governing data quality will not only strengthen outcomes but also provide future job security and increase the value data scientists bring to organisations. 
 
+*Note that this article is based on the following paper and contains some of the same ideas: Hoerl, Roger W. 2025. [“The Future of Statistics in an AI Era.”](https://www.tandfonline.com/doi/full/10.1080/08982112.2025.2556222) Quality Engineering, published September 10, 2025.*
+
 ::: {.article-btn}
 [Explore more data science ideas](/foundation-frontiers/index.qmd)
 :::
@@ -66,7 +66,7 @@ As coding becomes easier in an AI-enabled world - where anyone can code and anal
 ::: grid
 
 ::: {.g-col-12 .g-col-md-12}
-About the author:
+About the authors:
 : [Roger Hoerl](https://www.linkedin.com/in/roger-hoerl-6b6b3a5/) is Brate-Peschel Professor of Statistics at Union College, after previously heading the Applied Statistics Laboratory at [GE Global Research](https://www.ge.com/news/reports/tag/ge%20global%20research) for many years. He has been elected to the International Statistical Institute and the International Academy for Quality, recieved numerous statistic awards, and authored five books in the areas of statistics and business improvements. 
 : [Willis Jensen](https://www.linkedin.com/in/willis-jensen-305bba6/) is data and analytics expert, currently Senior Manager of People Analytics and Business Intelligence at [CHG Healthcare](https://chghealthcare.com/). He is an Adjunct Professor of Statistics at Brigham Young University, [writes on Substack](https://willisjensen.substack.com/) and is a member of the Real World Data Science [editorial board](https://realworlddatascience.net/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.html).  
 
