--- a/foundation-frontiers/posts/2026/01/27/data-qual-is-competitive-edge.qmd
+++ b/foundation-frontiers/posts/2026/01/27/data-qual-is-competitive-edge.qmd
@@ -58,6 +58,8 @@ As coding becomes easier in an AI-enabled world - where anyone can code and anal
 
 *Note that this article is based on the following paper and contains some of the same ideas: Hoerl, Roger W. 2025. [“The Future of Statistics in an AI Era.”](https://www.tandfonline.com/doi/full/10.1080/08982112.2025.2556222) Quality Engineering, published September 10, 2025.*
 
+You can find out more about the *Real World Data Science* stance on data quality from our article ['Why We Should All Be Data Quality Detectives'](https://realworlddatascience.net/foundation-frontiers/posts/2025/10/30/data-detectives.html). 
+
 ::: {.article-btn}
 [Explore more data science ideas](/foundation-frontiers/index.qmd)
 :::
