--- a/foundation-frontiers/posts/2026/01/29/beyond-quantification-delacroix-interview.qmd
+++ b/foundation-frontiers/posts/2026/01/29/beyond-quantification-delacroix-interview.qmd
@@ -23,7 +23,7 @@ Watch the full interview below and scroll down for key takeaways and some analys
 
 ## Interview: Beyond Quantification and Uncertainty in AI
 
-<!https://www.youtube.com/watch?v=tJDy293oqPk>
+{{< video https://www.youtube.com/watch?v=tJDy293oqPk >}}
 
 ---
 
