--- a/index.qmd
+++ b/index.qmd
@@ -126,11 +126,11 @@ toc: false
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## January Newsletter
-Happy new year! Hope you all had a fantastic holiday period and indulged to the best/worst of your abilities. 2026 is here - time to prepare for the year ahead with some good reading materials on all things Data Science and AI…
+## February Newsletter
+Well January seemed to fly by. With 2026 well underway, and no letup in the geopolitical shocks, perhaps it is time for some distraction with all things Data Science and AI…
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](https://substackcdn.com/image/fetch/$s_!BGWl!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Fca23c697-f539-45db-beec-b6ce582d5ecf_1666x880.png)
+![](https://substackcdn.com/image/fetch/$s_!KpmJ!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F18e7ece9-22bb-4285-8106-1963696bc413_2127x1400.jpeg)
 :::
 :::
 
