--- a/the-pulse/posts/2026/02/02/colarado-AI.qmd
+++ b/the-pulse/posts/2026/02/02/colarado-AI.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Colorado's AI Law Pause: What It Means for People Working in Data Science"
 description: |
-  Colorado’s decision to delay and potentially rewrite its first-in-the-nation Artificial Intelligence Act, alongside President Trump’s recent executive order discouraging state-level AI regulation, highlights a growing tension between ambitious AI governance goals and the operational realities of working in data science. Drawing on lessons from Colorado’s policy experiment and the European Union’s AI Act, this piece translates regulatory debates into concrete implications for practitioners who design, deploy, and maintain data products. Rather than treating governance as a legality, the article shows how accountability requirements surface directly in technical workflows such as documentation, data lineage, monitoring, reproducibility, and human oversight. The piece offers practical guidance for data scientists, analysts, and engineers on how to design flexible, observable systems that reduce regulatory risk, while improving technical quality and organizational resilience.
-categories:
+  As AI regulation wobbles, this piece shows data scientists how today’s policy fights translate into concrete design choices—and how smarter systems can reduce risk while improving quality.
+  categories:
   - AI governance
   - Applied data science
   - Data engineering and MLOps
