--- a/applied-insights/case-studies/posts/2026/02/11/algorithmic_bias_credit_scoring.qmd
+++ b/applied-insights/case-studies/posts/2026/02/11/algorithmic_bias_credit_scoring.qmd
@@ -9,7 +9,7 @@ author: Devin Partida
 date: 2026-02-11
 date-format: long
 toc: true
-image: images/thumbcredit
+image: images/thumbcredit.png
 ---
 
 When you apply for a credit card or a loan, algorithms work in the background to determine financial worthiness. Despite increasing advancements, these are [still imperfect](https://hai.stanford.edu/news/how-flawed-data-aggravates-inequality-credit) due to inherent biases. As data science students and professionals, you’ll inevitably face similar issues relating to biased data sets and should know how to combat them. What are some of the most effective techniques, and why do they matter?
@@ -32,7 +32,7 @@ Elsewhere, researchers examined the effects of using large language models to ev
 
 Sources of bias in credit scoring data and algorithms are more common than you might think. They can include:
 
-![](images/infog.png){width=80% fig-align="center"}
+![](images/infogg.png){width=80% fig-align="center"}
 
 One straightforward way to identify bias in training data is to be aware of the most common types and build algorithms to be less reliant on them when possible. Regularly reviewing the training data is similarly effective because it can catch biases before they have real-life effects. 
  
