--- a/applied-insights/case-studies/posts/2026/02/11/algorithmic_bias_credit_scoring.qmd
+++ b/applied-insights/case-studies/posts/2026/02/11/algorithmic_bias_credit_scoring.qmd
@@ -32,7 +32,7 @@ Elsewhere, researchers examined the effects of using large language models to ev
 
 Sources of bias in credit scoring data and algorithms are more common than you might think. They can include:
 
-![](images/infogg.png){width=80% fig-align="center"}
+![](images/infographic.png){width=80% fig-align="center"}
 
 One straightforward way to identify bias in training data is to be aware of the most common types and build algorithms to be less reliant on them when possible. Regularly reviewing the training data is similarly effective because it can catch biases before they have real-life effects. 
  
