--- a/the-pulse/posts/2026/02/18/rwds_big_questions_ai_regulation.qmd
+++ b/the-pulse/posts/2026/02/18/rwds_big_questions_ai_regulation.qmd
@@ -23,31 +23,30 @@ For the latest video in our RWDS Big Questions series, our panel explores this d
 
 ## Takeaways at a glance
 
-::: {.callout-note}
 - **Innovation and regulation are not opposites** – both are essential, but difficult to balance.
 - **Responsible progress requires proportionality** – not all AI applications carry the same level of risk.
 - **Transparency enables better governance** – open dialogue between developers and regulators is key.
 - **Risk-based frameworks provide structure** – distinguishing low-, high-, and unacceptable-risk uses helps focus oversight.
 - **Global disparities complicate regulation** – some regions are regulating advanced AI systems, while others are still building foundational capacity.
 - **Innovation needs protected space** – experimentation, iteration, and even failure are critical before formal standardisation.
-:::
 
+![](images/infog.png){width=50% fig-align="center"}
 
 ## Key themes and analysis
 
-### Proportional regulation through risk
+**Proportional regulation through risk**
 
 Not all AI systems pose the same level of harm. A risk-based approach — distinguishing low-, high-, and unacceptable-risk uses — offers a practical middle ground. It avoids blanket restrictions while ensuring stronger oversight where impact is greatest. The debate becomes less about whether to regulate, and more about how proportionate that regulation should be.
 
-### Transparency as common ground
+**Transparency as common ground**
 
 Openness can bridge the gap between technologists and regulators. Clear communication about capabilities, limitations and risks enables more informed policy decisions. When innovation happens transparently and in dialogue with regulators, governance can evolve alongside technology rather than lagging behind it.
 
-### The global unevenness of AI governance
+**The global unevenness of AI governance**
 
 AI regulation is developing unevenly across regions. While parts of the West are formalising frameworks, many countries are still building foundational AI capacity. This raises difficult questions about sequencing: should regulation lead innovation, or follow it? A one-size-fits-all model may not reflect global realities.
 
-### Protecting space to experiment
+**Protecting space to experiment**
 
 Innovation requires room to test, iterate and occasionally fail. Early experimentation should not be overburdened with rigid controls — but successful, scalable systems must eventually transition into more standardised and regulated environments. The challenge is designing pathways that support both creativity and accountability.
 
